--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
     <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
     <script>
-
+      var kk = 3;
       var dashCmd;
       var speedOfFloating = 50, speedOfShooting = 1.2, slowR = 150;
       var maxx = 1400, maxy = 720, outR = 400;
